Fix overflow in editor

--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -1,5 +1,7 @@
 .image-builder-container {
   position: relative;
+  height: 100%;
+  overflow: auto;
 }
 .image-builder-container .image-builder {
   background: #cacaca;
